# hs-bmi

./: CHANGELOG.md  README.md  cabal.project.freeze  example.sh  hs-bmi  hs-bmi.cabal
app/: Main.hs
src/: Bmi.hs
src/Bmi/: Core.hs  Ltsv.hs
src/Bmi/Core/: Domain.hs  Dto.hs  Error.hs  Length.hs  Mass.hs
test/: Spec.hs
