cabal-version:      3.14
name:               hs-bmi
version:            0.1.0.0
-- synopsis:
-- description:
license:            Apache-2.0
license-file:       LICENSE
author:             yanagitani
maintainer:         takanori.yanagitani@gmail.com
-- copyright:
category:           Math
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  Bmi
    other-modules:
        Bmi.Core,
        Bmi.Core.Domain,
        Bmi.Core.Dto,
        Bmi.Core.Error,
        Bmi.Core.Length,
        Bmi.Core.Mass,
        Bmi.Ltsv
    build-depends:
        base ^>=4.17.2.1,
        text ^>=2.0.2
    hs-source-dirs:   src
    default-language: GHC2021

executable hs-bmi
    import:           warnings
    main-is:          Main.hs
    -- other-modules:
    -- other-extensions:
    build-depends:
        base ^>=4.17.2.1,
        text ^>=2.0.2,
        hs-bmi
    hs-source-dirs:   app
    default-language: GHC2021

test-suite hs-bmi-test
    import:           warnings
    default-language: GHC2021
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Spec.hs
    build-depends:
        base ^>=4.17.2.1,
        text ^>=2.0.2,
        hs-bmi
